[package]
name = "natssend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.38.0"
clap = "4.5.27"
env_logger = "0.11.7"
flate2 = { version="1.0.35",default-features = false, features = ["rust_backend"] }
log = "0.4.26"
tokio = { version = "1.43.0", features = ["full"] }

[profile.release]

[[bin]]
name="natssend"
path="src/main.rs"

